AFT5 feedback page work - add helpfulness count column (still need to detangle hide from mark as abuse, and add the second-level hide/delete), fix pagination/filter/sort issues, light CSS fixes for readability, and make the HTML generation a little less unusable.

--- a/modules/jquery.articleFeedbackv5/jquery.articleFeedbackv5.special.css
+++ b/modules/jquery.articleFeedbackv5/jquery.articleFeedbackv5.special.css
@@ -1,2 +1,4 @@
 /* css here  */
-div.articleFeedbackv5-feedback { border:1px solid #CCC; background:#EEE; margin-top:10px; }
+div.articleFeedbackv5-feedback { border:1px solid #CCC; background:#EEE; margin-top:10px; clear:both;}
+div.articleFeedbackv5-feedback-tools { border:1px solid #CCD; background:#EEF; margin:10px; width:219px; float:right;}
+p.articleFeedbackv5-comment-head { border:1px solid #CCC; }
